--- a/app/src/main/res/layout/registrasi_main.xml
+++ b/app/src/main/res/layout/registrasi_main.xml
@@ -60,4 +60,31 @@
         app:layout_constraintStart_toEndOf="@+id/button3"
         app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/username"
+        android:textSize="24dp"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="209dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/email"
+        android:textSize="24dp"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="263dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/password"
+        android:textSize="24dp"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="316dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
