--- a/app/src/main/res/drawable/kotakkecil.xml
+++ b/app/src/main/res/drawable/kotakkecil.xml
@@ -1,2 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android"></selector>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <gradient
+                android:startColor="#00bcd4"
+                android:centerColor="#2196f3"
+                android:endColor="#00bcd4"
+                android:angle="45"
+                ></gradient>
+        </shape>
+    </item>
+</selector>
