--- a/app/src/main/res/drawable/splash_bg.xml
+++ b/app/src/main/res/drawable/splash_bg.xml
@@ -3,9 +3,9 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#3f51b5"
+                android:startColor="#00bcd4"
                 android:centerColor="#2196f3"
-                android:endColor="#00bcd4"
+                android:endColor="#3f51b5"
                 android:angle="45"
                 ></gradient>
         </shape>
